--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 VITE_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
 VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+
+VITE_IMAGEKIT_PUBLIC_KEY=
+VITE_IMAGEKIT_URL_ENDPOINT=
+VITE_IMAGEKIT_AUTH_ENDPOINT=
